--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/node": "^7.16.0"
+  }
 }
